--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <video controls autoplay loop>
-    <source src="http://159.203.173.88/animation.mp4" type="video/mp4">
+    <source src="https://github.com/YOUR_USERNAME/YOUR_REPO/releases/tag/latest" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </body>
