--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <video controls autoplay loop>
-    <source src="<source src="https://github.com/klausmayr/stopmotionparty/releases/download/latest/animation.mp4" type="video/mp4">" type="video/mp4">
+    <source src="<source src="https://pub-a174dc77d5454c67adc8a1535e5e86a3.r2.dev/animation.mp4" type="video/mp4">" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </body>
